RADAR-21: Rename animation. Add print style to show collapsed blocks. Fix missing margin on answer btns.

--- a/web/assets/scss/animations.scss
+++ b/web/assets/scss/animations.scss
@@ -19,7 +19,7 @@
     }
 }
 
-@keyframes flyin {
+@keyframes blurfade {
     to { 
       filter: blur(0);
       opacity: 1;
